# stockmcp

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  coverage.xml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
api/: main.py
scripts/: run_backtest_yahoo.py
src/app/: __init__.py  config.py  logging.py  main.py
src/app/backtest/: engine.py  metrics.py  models.py
src/app/decision/: engine.py
src/app/market/: base.py  mock.py  models.py  yahoo.py
src/app/portfolio/: engine.py  models.py  risk.py  sizing.py
src/app/signals/: base.py  enums.py  indicators.py  models.py  swing_sma_rsi.py
src/stockmcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_backtest_engine.py  test_health.py  test_market_provider.py  test_portfolio_engine.py  test_price.py  test_signals.py
web/: package-lock.json  package.json
web/app/dashboard/: page.tsx
web/components/: DecisionSummary.tsx  DrawdownChart.tsx  EquityCurve.tsx  HelpModal.tsx
web/lib/: api.ts
