[project]
name = "stockmcp"
version = "0.1.0"
description = "Personal stock trading MCP system"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn",
    "yfinance",
    "pandas",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "httpx"
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
